Changes since 2.9.8:
	- fixed a crash when adding additional records
	- make Notifications jump in front of the queue, allowing for
		speedier updates (suggested by Mark Jeftovic of EasyDNS)

	- gid/uid logging confusion (Dean Mills)

Changes since 2.9.7:
	- NS queries for zones we are not authoritative about now get their NS
	  records in the authority section
imp	- powerldap.hh doesn't need crypt.h (Richard Arends)
	- can't handle binary labels, print a warning about that
bug	- recursor sometimes did very extended negative caching, sometimes for *days*
	- allow-axfr-ips setting now leads to disabling 
	  AXFR for non-listed addresses.
imp	- added Solaris init.d script
bug	- g* backends now lowercase their records field
	- AIX support
	- removed everybody's favorite warning in zone2ldap.cc
	- added zone2ldap.cc

Changes since 2.9.6:
	* need to do work on ( and ) in zones!
feat	- added local-query-address (Mark Bergsma)
bug	- zone2sql now removes dots in the SOA record
imp	- zone2sql no longer silently tries to read directories
imp	- improved error reporting if unable to figure out IP addresses for
	  slaves
imp	- removed vestigal receiver-threads setting
bug	- ldapbackend needs to include utility.hh (Remco Post)
bug	- pdns_control could sometimes leave files behind in /tmp (dG)
impr	- ldapbackend updates 
bug	- TCP incoming AXFR fixes for Solaris and other big endian systems 
	  (Willem de Groot helped debug)
imp	- bogus error message about unparseable packets (Mark Bergsma)
bug	- solved potential crash in recursor (Dan Faerch delivered coredump)
imp	- when started via a path, pdns_server could not always find itself (Maurice Nonnekes)
bug	- silly wuh debugging output in zone2sql/bindbackend (Ivo van der Wijk)
imp	- pdns_recursor lived in the 'bin' and not the 'sbin' directory (Norbert Sendetzky)
imp	- chatter from master/slave backend is not 'Error'-worthy (Willem)
bug	- recursor neglected the difference between negative cache of NXDOMAIN and NOERROR