@@ -52,9 +52,10 @@ build-static stamp-build-static:
 		--sysconfdir=/etc/powerdns \
 		--infodir='$${datadir}/info' \
 		--mandir='$${datadir}/man' \
-		--with-modules="mysql gmysql gpgsql pipe pdns xdb" \
+		--with-modules="mysql gmysql gpgsql pipe pdns xdb ldap" \
 		--with-dynmodules="" \
-		--enable-static-binaries --enable-recursor 
+		--enable-static-binaries --enable-recursor \
+		--with-pgsql-lib=/opt/postgresql-with-3.2/lib/
 	make
 	touch stamp-build-static
 
